--- a/.github/workflows/cd_staging.yml
+++ b/.github/workflows/cd_staging.yml
@@ -18,7 +18,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            cd  cd link_shortner/ 
+            cd link_shortner/ 
             git pull origin main
             npm install --omit=dev
             npm run build
